[package]
name = "guessing_game"
version = "0.1.0"
authors = ["mochidan <momochidan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 乱数を生み出すライブラリ
# 「バージョン0.3.14と互換性のある公開APIを持つ任意のバージョン」を意味します。
rand = "0.3.14"
